<resources>
    <string name="app_name">Barmajiaat</string>
    <string name="register_banner">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register_button">Register</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>