<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFolder.UI.auth.LoginActivity"
    android:background="@drawable/gradient_splash_background">



<!-- Login banner-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="36sp"
        android:textColor="@color/RegLogBannerFont"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginVertical="93dp"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="660dp" />



<!-- account question part 1 -->
    <TextView
        android:id="@+id/tv_login_dontHaveAccountWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
        android:textColor="@color/RegLogAccountQuestion"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="738dp"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="41dp" />


<!-- account question part 2 -->
    <TextView
        android:id="@+id/tv_login_signUpWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="14sp"
        android:textColor="@color/RegLogAccountQuestion"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="738dp"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="41dp" />






<!-- Email Edit Text-->
    <EditText
        android:id="@+id/login_etEmail"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_mail_focus_color_list"
        android:drawablePadding="13dp"
        android:layout_width="303.04dp"
        android:layout_height="50dp"
        android:layout_marginTop="209dp"
        android:layout_marginBottom="476dp"
        android:layout_marginStart="45dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:backgroundTint="@color/edit_text_line_focus_tint_list"
        android:hint= "@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />



<!-- Password Edit Text-->
    <EditText
        android:id="@+id/login_etPassword"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password_focus_color_list"
        android:drawablePadding="13dp"
        android:layout_width="303.04dp"
        android:layout_height="50dp"
        android:layout_marginTop="282dp"
        android:layout_marginBottom="405dp"
        android:layout_marginStart="45dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:backgroundTint="@color/edit_text_line_focus_tint_list"
        android:hint= "@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />


<!-- Login button  -->
    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:layout_centerHorizontal="true"
        android:paddingStart="86dp"
        android:paddingEnd="86dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/login_button"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:backgroundTint="@color/RegLogBannerFont"/>



<!-- the loading circle that appears when pressing the Login button   -->
    <ProgressBar
        android:id="@+id/pb_login"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>




</RelativeLayout>